--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,6 +111,19 @@ jobs:
           path: ${{ github.workspace }}/cover.html
         if: always()
 
+  njs-unit-tests:
+    name: NJS Unit Tests
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      - name: Setup Node.js Environment
+        uses: actions/setup-node@v3
+        with:
+          node_version: 18
+      - run: npm install mocha@^8.2 esm chai
+      - run: npx mocha -r esm njs-modules/httpmatches_test.js
+
   binary:
     name: Build Binary
     runs-on: ubuntu-20.04
